codegen/ui_tests/export_mod_bad_value.stderr
error: expecting string literal
  --> ui_tests/export_mod_bad_value.rs:11:18
   |
11 | #[rhai_fn(name = true)]
   |                  ^^^^
